--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,4 @@ api:
     millis: ${one_day_millis:86400000} 
   date:
     format: ${dt_format:dd/MM/yyyy}
+    regex: ^(3[01]|[12][0-9]|0[1-9])/(1[0-2]|0[1-9])/[0-9]{4}$
